# ai-agents

./: .env.example  README.md  pyproject.toml
src/ai_agents/: cli.py  config.py  main.py
src/ai_agents/agents/: __init__.py  issue_analyzer_agent.py
src/ai_agents/clients/: jira_client.py
src/ai_agents/clients/llm/: __init__.py  base_client.py  cli_client.py  llm_factory.py  ollama_client.py
src/ai_agents/dto/: issue_comment.py
src/ai_agents/models/: issue.py
src/ai_agents/prompts/: issue_analysis.md
src/ai_agents/runtime/: agent_runtime.py  runtime_response.py
src/ai_agents/services/: issue_service.py
src/ai_agents/services/adf/: adf_builder.py  adf_parser.py
src/ai_agents/utils/: __init__.py  logger.py  prompt_loader.py
